[gd_scene load_steps=3 format=3 uid="uid://b8vwj15kh08lm"]

[ext_resource type="Script" uid="uid://cjukc08kgk47w" path="res://ui/battle/battle_scene.gd" id="1_5g7vw"]
[ext_resource type="Texture2D" uid="uid://dd230763fvqyb" path="res://assets/battles/coffee/咖啡廳bg.png" id="1_fw8re"]

[node name="BattleScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5g7vw")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
scale = Vector2(0.551455, 0.551455)
texture = ExtResource("1_fw8re")
stretch_mode = 5

[node name="RecordButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.0015625
anchor_bottom = 0.0015625
offset_left = 270.0
offset_top = 876.0
offset_right = 278.0
offset_bottom = 884.0
scale = Vector2(16.0281, 16.0281)
metadata/_edit_use_anchors_ = true

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 35.0
offset_top = 66.0
offset_right = 123.0
offset_bottom = 97.0
scale = Vector2(4.21039, 4.21039)
text = "返回上一頁"

[node name="MicPlayer" type="AudioStreamPlayer" parent="."]

[node name="VoicePlayer" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
